Release notes
-------------

Date          Version   Comment
2019/03/15    1.0.0     First release
2020/09/10    1.4.0     Bug fix