@@ -6,7 +6,6 @@ Publish content from Studietube
 ## Installation
 - Open your Site administration
 - Select Plugins -> Install plugins and upload the zip file containing this plugin, alternatively you can add the content of this plugin directly to /lib/editor/atto/plugins and open moodle on your browser to complete the installation process
-- Go to Site administration -> Security -> Site security settings and turn on "Enable trusted content"
 
 ## Usage
 - To use the plugin, simply open any Atto editor and you should see the Studietube button on the toolbar
