@@ -24,8 +24,15 @@
 
 defined('MOODLE_INTERNAL') || die();
 
-$plugin->version   = 2020091701;        // The current plugin version (Date: YYYYMMDDXX).
-$plugin->requires  = 2014051200;        // Requires Moodle 2.7 or higher, when Atto was added to core.
-$plugin->component = 'atto_studietube';  // Full name of the plugin (used for diagnostics).
-$plugin->maturity  = MATURITY_STABLE;
-$plugin->release   = '1.4.2'; // Human readable version information.
+function atto_studietube_params_for_js($elementid, $options, $fpoptions)
+{
+    global $USER;
+    
+    $full = false;
+    
+    if(is_siteadmin()) {
+        $full = true;
+    }
+    
+    return array('full' => $full);
+}
