@@ -1,1 +1,1 @@
-YUI.add("moodle-atto_studietube-button",function(i,e){i.namespace("M.atto_studietube").Button=i.Base.create("button",i.M.editor_atto.EditorPlugin,[],{_currentSelection:null,initializer:function(){var t=this;window.addEventListener("message",function(e){t._handleMedia(e,t)},!1),this.addButton({icon:"studietube",iconComponent:"atto_studietube",callback:this._displayDialogue})},_displayDialogue:function(){var e=this.getDialogue({headerContent:"Studietube",width:"600px",height:"500px",focusAfterHide:!0}),t=i.Node.create("<iframe></iframe>");t.setStyles({height:"400px",border:"none",width:"100%"}),t.setAttribute("src","//www.studietube.dk/app/bluebird/1?passtype=direct&notok=true&idcaller="+this.editor._yuid),e.set("bodyContent",t).show(),this.markUpdated()},_handleMedia:function(e,t){var i,d;this.getDialogue({focusAfterHide:null}).hide(),"https://www.studietube.dk"!==e.origin&&"http://www.studietube.dk"!==e.origin||"undefined"!=typeof(i=JSON.parse(e.data))[3]&&i[3].includes(t.editor._yuid)&&(d='<iframe src="//www.studietube.dk/e/'+i[0]+'/0" ',d+='width="480" height="390" allowfullscreen webkitallowfullscreen ',d+='mozAllowFullScreen frameborder="0" allow="encrypted-media"></iframe>',this.get("host").insertContentAtFocusPoint(d),this.markUpdated())}},{ATTRS:{disabled:{value:!0},area:{value:{}}}})},"@VERSION@",{requires:["moodle-editor_atto-plugin"]});
+YUI.add("moodle-atto_studietube-button",function(i,t){i.namespace("M.atto_studietube").Button=i.Base.create("button",i.M.editor_atto.EditorPlugin,[],{_currentSelection:null,initializer:function(){var e=this;window.addEventListener("message",function(t){e._handleMedia(t,e)},!1),this.addButton({icon:"studietube",iconComponent:"atto_studietube",callback:this._displayDialogue})},_displayDialogue:function(){var t=this.getDialogue({headerContent:"Studietube",width:"600px",height:"500px",focusAfterHide:!0}),e=i.Node.create("<iframe></iframe>");e.setStyles({height:"400px",border:"none",width:"100%"}),e.setAttribute("src","//www.studietube.dk/app/bluebird/1?passtype=direct&notok=true&idcaller="+this.editor._yuid),t.set("bodyContent",e).show(),this.markUpdated()},_handleMedia:function(t,e){var i,d;this.getDialogue({focusAfterHide:null}).hide(),"https://www.studietube.dk"!==t.origin&&"http://www.studietube.dk"!==t.origin||"undefined"!=typeof(i=JSON.parse(t.data))[3]&&i[3].includes(e.editor._yuid)&&(d="",this.get("full")?(d='<div style="width:100%;height:0;position:relative;padding-bottom:56.25%;">',d+='<iframe src="//www.studietube.dk/e/'+i[0]+'/0" ',d+='style="width:100%;height:100%;position:absolute;top:0;left:0;" allowfullscreen webkitallowfullscreen ',d+='mozAllowFullScreen frameborder="0" allow="encrypted-media"></iframe></div>'):(d='<div><img class="studietube" id="'+i[0]+'" ',d+='src="//www.studietube.dk/t/'+i[0]+'"></div>'),this.get("host").insertContentAtFocusPoint(d),this.markUpdated())}},{ATTRS:{full:{value:!1}}})},"@VERSION@",{requires:["moodle-editor_atto-plugin"]});
