@@ -4,3 +4,4 @@ Release notes
 Date          Version   Comment
 2019/03/15    1.0.0     First release
 2020/09/10    1.4.0     Bug fix
+2020/09/10    1.4.1     Responsive media
